{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 23,
  "lineage": "40b5738e-5d09-61ff-a82c-4d13b18b09ad",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e18ae6e39f4962f0",
            "arn": "arn:aws:ec2:eu-central-1:217087240544:instance/i-0c4ed43a5cc047e4a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4ed43a5cc047e4a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair-dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02771553286630caa",
            "private_dns": "ip-10-0-101-208.eu-central-1.compute.internal",
            "private_ip": "10.0.101.208",
            "public_ip": "18.159.146.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09e08cb177d0ab746",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a351a3f07e9aef2",
            "tags": {
              "Environmnent": "dev",
              "Name": "instance-dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08223bece1f28b8b9"
            ]
          },
          "dependencies": [
            "module.instances.aws_key_pair.mykeypair",
            "module.instances.aws_security_group.allow-ssh",
            "module.instances.data.aws_ami.ubuntu",
            "module.main-vpc.module.main-vpc.aws_subnet.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:217087240544:security-group/sg-08223bece1f28b8b9",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08223bece1f28b8b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-dev",
            "name_prefix": "",
            "owner_id": "217087240544",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environmnent": "dev",
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-06316ce9fecd447e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:217087240544:internet-gateway/igw-0f6d2d620655629a2",
            "id": "igw-0f6d2d620655629a2",
            "owner_id": "217087240544",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06316ce9fecd447e3"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f6d2d620655629a2",
            "id": "r-rtb-06cdc2ba3b248744e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06cdc2ba3b248744e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_internet_gateway.this",
            "module.main-vpc.module.main-vpc.aws_route_table.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ffa81c3abf6a09b6",
            "owner_id": "217087240544",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06316ce9fecd447e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-065c04cad031ee9a2",
            "owner_id": "217087240544",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06316ce9fecd447e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c4e3f2125ddfcae3",
            "owner_id": "217087240544",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-eu-central-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06316ce9fecd447e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06cdc2ba3b248744e",
            "owner_id": "217087240544",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06316ce9fecd447e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a288ef4a0fd7d40c",
            "route_table_id": "rtb-0ffa81c3abf6a09b6",
            "subnet_id": "subnet-08c2692b1b5125586"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.private",
            "module.main-vpc.module.main-vpc.aws_subnet.private",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b810c2b777323c8",
            "route_table_id": "rtb-065c04cad031ee9a2",
            "subnet_id": "subnet-0cc769f7009e8646d"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.private",
            "module.main-vpc.module.main-vpc.aws_subnet.private",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f01931218dd94658",
            "route_table_id": "rtb-0c4e3f2125ddfcae3",
            "subnet_id": "subnet-053bd90782046433b"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.private",
            "module.main-vpc.module.main-vpc.aws_subnet.private",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f605fe237eb6480",
            "route_table_id": "rtb-06cdc2ba3b248744e",
            "subnet_id": "subnet-05a351a3f07e9aef2"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.public",
            "module.main-vpc.module.main-vpc.aws_subnet.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac17b35da87d644a",
            "route_table_id": "rtb-06cdc2ba3b248744e",
            "subnet_id": "subnet-010c9b6deaa3c877a"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.public",
            "module.main-vpc.module.main-vpc.aws_subnet.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7f0e26fd557ea8a",
            "route_table_id": "rtb-06cdc2ba3b248744e",
            "subnet_id": "subnet-0363f9415cbccb4cb"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_route_table.public",
            "module.main-vpc.module.main-vpc.aws_subnet.public",
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:217087240544:subnet/subnet-08c2692b1b5125586",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08c2692b1b5125586",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "217087240544",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06316ce9fecd447e3"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:217087240544:subnet/subnet-0cc769f7009e8646d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0cc769f7009e8646d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "217087240544",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06316ce9fecd447e3"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:217087240544:subnet/subnet-053bd90782046433b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-053bd90782046433b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "217087240544",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-eu-central-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06316ce9fecd447e3"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:217087240544:subnet/subnet-05a351a3f07e9aef2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-05a351a3f07e9aef2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "217087240544",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06316ce9fecd447e3"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:217087240544:subnet/subnet-010c9b6deaa3c877a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-010c9b6deaa3c877a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "217087240544",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06316ce9fecd447e3"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:217087240544:subnet/subnet-0363f9415cbccb4cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-0363f9415cbccb4cb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "217087240544",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-eu-central-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06316ce9fecd447e3"
          },
          "dependencies": [
            "module.main-vpc.module.main-vpc.aws_vpc.this",
            "module.main-vpc.module.main-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.main-vpc.module.main-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:217087240544:vpc/vpc-06316ce9fecd447e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04a40ab95df80853c",
            "default_route_table_id": "rtb-0fa0a68bf2cc35652",
            "default_security_group_id": "sg-0f351a8af1d0d42fd",
            "dhcp_options_id": "dopt-b9bb3dd3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06316ce9fecd447e3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fa0a68bf2cc35652",
            "owner_id": "217087240544",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}